# arena-engine

./: .editorconfig  .gitattributes  .gitignore  BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
assets/shaders/: basic.frag  basic.vert  text.frag  text.vert  unlit.frag  unlit.vert
build-simple/: CMakeCache.txt
config/: engine.ini  test_120hz.ini
docs/: CI_SETUP.md  OPENGL45_UPGRADE.md
engine/contracts/include/arena/: contracts.hpp
engine/core/include/: stb_easy_font.h
engine/core/include/arena/: debug_hud.hpp  gl.hpp  gl_api.hpp  gl_canary.hpp  input.hpp  math.hpp  sun_lighting.hpp  text.hpp  version.hpp
engine/core/src/: debug_hud.cpp  imgui_impl_glfw.cpp  input.cpp  sun_lighting.cpp  text.cpp
engine/ecs/include/arena/ecs/: camera_system.hpp  components.hpp  registry.hpp
engine/ecs/src/: camera_system.cpp  registry.cpp
engine/gfx/include/arena/gfx/: gl_context.hpp  material.hpp  mesh.hpp  renderer.hpp  shader.hpp
engine/gfx/src/: gl_context.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp
scripts/: e1_scaffold.ps1  test-local.bat  test-local.ps1
src/: main.cpp
src/app/: Clock.cpp  Clock.hpp  Config.cpp  Config.hpp  Headless.cpp  Headless.hpp
tests/: it_headless.cpp  test_clock.cpp  test_config.cpp
tests/e1/: test_components_use.cpp  test_contracts_compile.cpp  test_contracts_smoke.cpp  test_ecs_basic.cpp
tests/e2/: test_camera.cpp  test_glad_init.cpp  test_hud_smoke.cpp  test_input.cpp  test_opengl45_text.cpp
tests/e3/: test_hot_reload.cpp  test_hot_reload_demo.cpp  test_renderer.cpp  test_shader_path.cpp
